<resources>
    <string name="app_name">TP2_nael_messaoudene</string>
    <string name="telephone">Telephone</string>
    <string name="image">image</string>
    <string name="nom">Nom</string>
    <string name="website">Website</string>
    <string name="adresse">Adresse</string>
    <string name="a_propos_de_moi">A propos de moi</string>
    <string name="add_neighbors">Ajouter un voisin</string>
    <string name="enregistrer">enregistrer</string>
    <string name="save">Enregistrer</string>
    <string name="hint_about">A propos de moi</string>
    <string name="hint_address">Adresse</string>
    <string name="hint_website">Website</string>
    <string name="hint_phone">Telephone</string>
    <string name="hint_name">Nom</string>
    <string name="hint_image">Image</string>
    <string name="neighborsList">Liste des voisins</string>
    <string name="addNeighborsTitle">Ajouter un voisin</string>
</resources>
